<resources>
    <!--Nombre de la App-->
    <string name="app_name">Fiu Fiu!</string>

    <!--Botones-->
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <!--NAV-->
    <string name="home">Home</string>
    <string name="sms">Messages</string>
    <string name="user">Profile</string>

    <!--Avisos-->
    <string name="m1">Si también deslizan el dedo a la derecha, ¡es un match!</string>
    <string name="m2">Unete a nosotros y socializa con miles de personas</string>
    <string name="no_login">¿Aún no tienes una cuenta?</string>
    <string name="no_register">¿Ya tienes una cuenta?</string>
    <string name="cc_register">Registrarme</string>
    <string name="cc_login">Loguearme</string>
    <string name="or_signup">Or Signup with</string>
    <string name="or_signin">Or Signin with</string>
    <string name="subtitle">Ingresa tus datos correctamente</string>
    <string name="welcome">COMENCEMOS</string>

    <!--Registro y Login de Usuarios-->
    <string name="name">Nombre</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repite tu contraseña</string>

    <!--Colores Usados-->
    <color name="pat1">#9751ff</color>
    <color name="pat2">#F545FF</color>
    <color name="pat3">#B13FE8</color>
    <color name="pat4">#543FE8</color>
    <color name="pat5">#455FFF</color>
    <color name="inactive">#878787</color>
    <!--Colores Complementarios-->
    <color name="pat6">#5F27B3</color>
    <color name="pat7">#A66BFF</color>
    <color name="pat8">#B3AD15</color>
    <color name="pat9">#FFF952</color>
    <!--Colores Apartados-->
    <color name="PlomoApp">#70717b</color>
    <color name="NegroApp">#2E2828</color>
    <color name="PlomoTransparente">#f1f1f1</color>
    <!--Error Apartados-->
    <string name="errorLogin">Error al loguearse</string>
    <string name="errorRegister">Error al Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="signout">Sign Out</string>
    <string name="edit">EDIT</string>
    <string name="save">GUARDAR</string>


    <string-array name="initial_values">
        <item name="min">18</item>
        <item name="max">25</item>
    </string-array>

    <dimen name="_5dp">5dp</dimen>


    <string name="edit_profile">Edit Profile</string>
    <string name="about_profile_name">Acerca de mí</string>
    <string name="about">Descripción</string>
    <string name="job_title">Trabajo</string>
    <string name="company">Compañia</string>
    <string name="school_college">Universidad</string>
    <string name="gender">Genero</string>
    <string name="date_of_birth">Edad</string>
</resources>